# Algorand-dapps_smart-contract

./: .gitignore  LICENSE  README.md  index.js  main.py  package.json  pyproject.toml  requirements.txt  wsgi.py
Notebooks/: first_transaction.ipynb
front_end/: package-lock.json
front_end/public/: index.html
front_end/src/: App.js  index.js
scripts/: first_transaction_example.py
tests/: test_account.py  test_trans.py
web-apps/: algod.py
webapps/: __init__.py  admin_page.py  algodand.py  forms.py  index.py  models.py  views_pages.py
webapps/css_file/css/: nav.css
webapps/frontend_page/: create_asset.html  index.html  login.html  mnemonic.html  nav.html  nft.html  send.html  success.html  transactions.html
webapps/static/css/: style.css
