[tool.poetry]
name = "repl_python3_gettingStartedPython"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
msgpack = "^1.0.3"
PyNaCl = "^1.5.0"
pycryptodomex = "^3.12.0"
py-algorand-sdk = "^1.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"